fixed cloud alignment for representative dashboard

--- a/app/assets/stylesheets/components/_illustration.scss
+++ b/app/assets/stylesheets/components/_illustration.scss
@@ -9,6 +9,17 @@
 // }
 
 
+// representative dashboard illustration
+.illustration-cloud-representative {
+  position: absolute;
+  width: 518px;
+  height: 268px;
+  left: -1%;
+  top: -110%;
+  z-index: 1;
+  width: -190px;
+}
+
 // digital will
 
 .illustration-digital{
